# PAMSI_WARCABY

./: CMakeLists.txt  README.md  checkersgame.cpp  checkersgame.h  evalbar.cpp  evalbar.h  mainwindow.cpp  mainwindow.h
